@@ -1,3 +1,9 @@
+2009-03-11  Alexander Fehr  <pizzapunk gmail com>
+
+  * mpc-0.15-1:
+  New upstream release.
+  Changed license to GPL2.
+
 2008-12-22  Alexander Fehr  <pizzapunk gmail com>
 
   * mpc-0.14-1:
